2015-03-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Magick++/lib/Image.cpp (repage): New method to reset page
	settings.  Contributed by Dirk Lemstra.

2015-03-07  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadOnePNGImage): Moved quantum_scanline
	and png_pixels into the MngInfo struct.  This prevents
	memory leaks when reading malformed PNG images.

	* coders/png.c (ReadOnePNGImage): Removed two superflous calls to
	CloseBlob().

	* coders/png.c (ReadOnePNGImage): Do the allocation and free of
	quantum_scanline outside the "pass" loop, i.e., do it once per
	image rather than once per pass while decoding interlaced PNG
	images.  Log these when -debug coders is enabled.

	* coders/png.c: Fixed typo recently introduced in the JNG reader
	(status != MagickFalse should be status == MagickFalse).

2015-03-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xwd.c (ReadXWDImage): Fix memory leaks in error paths.

	* coders/xpm.c (ReadXPMImage): Fix memory leaks in error paths.

	* coders/miff.c (ReadMIFFImage): Fix memory leak of Image in error
	case.
	(ReadMIFFImage): Fix memory leaks of zlib and bzlib2 context in
	error path which reports decompression failure.

	* coders/bmp.c (ReadBMPImage): BMP reader was wrongly rejecting
	RLE-compressed files as being too small.  Fixes SourceForge bug
	#295 "1.3.21 identify regression".  Also fixed 'ping' support code
	which was still reading the pixels in 'ping' mode.
	(ReadBMPImage): Fix memory leak when BMP is handled as a sequence.

2015-03-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/palm.c (ReadPALMImage): PALM reader now applies PALM's
	special non-linear colormap if the file does not provide a custom
	colormap.  Custom colormap size is verified to not exceed image
	colors.  Added logging statements regarding colormap.

2015-02-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/index.rst: Update for 1.3.21 release.
