@@ -5,6 +5,9 @@
 
 2015-03-07  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>
 
+	* coders/png.c (ReadOnePNGImage): Respect the PixelsResource
+	limit.
+
 	* coders/png.c (ReadOnePNGImage): Moved quantum_scanline
 	and png_pixels into the MngInfo struct.  This prevents
 	memory leaks when reading malformed PNG images.
